# artificial.nds

./: .gitignore  CMakeLists.txt  artificial_nds.elf  artificial_nds.nds  convert-assets-and-make.sh  readme.md
aseprite/: PIco+magenta.aseprite  aboutbutton.ase  aboutpage.aseprite  generatebutton.ase  instructionsbackground.ase  mockup.aseprite  paramsbackground.aseprite  slider.aseprite  sliderknob.aseprite  turtle.aseprite
aseprite/graphicsparts/: pixel.aseprite
assets/: convert.sh  slidertrack.aseprite
source/: backgrounds.h  gui_sprites.h  imgdraw_test.h  imgdraw_test_perlin.h  instructions.h  main.cpp  text_console.h  utils.h  view.h
